// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foundry-agent - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Full agent lifecycle for Microsoft Foundry: create, deploy, invoke, and troubleshoot both prompt and hosted agents.
USE FOR: create agent, deploy agent, invoke agent, test agent, troubleshoot agent, hosted agent, prompt agent, agent container, agent service, new agent, delete agent, update agent, list agents, agent CRUD, agent memory, agent tools, web search agent, bing grounding, azure ai search agent, MCP tool, function calling, code interpreter, start agent, stop agent, agent logs, chat with agent.
DO NOT USE FOR: model deployment without agent context (use models/deploy-model), project creation (use project/create), RBAC setup (use rbac), quota management (use quota).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "bing",
    "both",
    "calling",
    "chat",
    "cli",
    "code",
    "container",
    "context",
    "create",
    "creation",
    "crud",
    "delete",
    "deploy",
    "deploy-model",
    "deployment",
    "foundry",
    "full",
    "function",
    "grounding",
    "hosted",
    "interpreter",
    "invoke",
    "lifecycle",
    "list",
    "logs",
    "management",
    "mcp",
    "memory",
    "microsoft",
    "model",
    "models",
    "project",
    "prompt",
    "quota",
    "rbac",
    "search",
    "service",
    "setup",
    "start",
    "stop",
    "test",
    "tool",
    "tools",
    "troubleshoot",
    "update",
    "with",
    "without",
  ],
  "name": "foundry-agent",
}
`;

exports[`foundry-agent - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "bing",
  "both",
  "calling",
  "chat",
  "cli",
  "code",
  "container",
  "context",
  "create",
  "creation",
  "crud",
  "delete",
  "deploy",
  "deploy-model",
  "deployment",
  "foundry",
  "full",
  "function",
  "grounding",
  "hosted",
  "interpreter",
  "invoke",
  "lifecycle",
  "list",
  "logs",
  "management",
  "mcp",
  "memory",
  "microsoft",
  "model",
  "models",
  "project",
  "prompt",
  "quota",
  "rbac",
  "search",
  "service",
  "setup",
  "start",
  "stop",
  "test",
  "tool",
  "tools",
  "troubleshoot",
  "update",
  "with",
  "without",
]
`;
